--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  logger: ^2.3.0
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  http: ^1.2.0
+  sqflite: ^2.3.2
+  connectivity_plus: ^6.0.3
+  flutter_native_splash: ^2.3.11
 
 dev_dependencies:
   flutter_test:
